--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -22,8 +22,10 @@
 						<div class="mgz-link">
 							<ul class="mgz-ul2">
 								<li class="active"><a href="/serviceIntro">서비스 소개</a></li>
-								<li><a href="/notice">공지사항</a></li>
-								<li><a href="/customerService">고객센터</a></li>
+								<!-- /notice -->
+								<li><a href="javascript:modalAlertShow('서비스 준비중 입니다.','');">공지사항</a></li>
+								<!-- /customerService -->
+								<li><a href="javascript:modalAlertShow('서비스 준비중 입니다.','');">고객센터</a></li>
 							</ul>
 						</div>
 					</div>
