--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -98,8 +98,8 @@
 			<div class="ta-sho">
 				<a href="#"><span>Guide</span></a>
 			</div>
-			<div class="mab-rb" style="padding-top:100px;">
-				<!-- <a href="javascript:fnModalAlert();" class="mab-a"><span>Guide</span></a> -->
+			<div class="mab-rb">
+				<a href="javascript:fnModalAlert();" class="mab-a"><span>Guide</span></a>
 				<ul class="mab-ul">
 					<!-- <li><a href="javascript:fnModalAlert();"><img src="resources/img/icon-4.png" /> <span>거래방법</span></a></li> -->
 					<li><a href="#" data-toggle="modal" data-target="#authorModal1"><img src="resources/img/icon-5.png" /> <span>작가등록</span></a></li>
