--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -376,7 +376,7 @@ function artistLibraryList(){
 	        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
 	        		}
 	        		if(upAndComingArtist[i].artstProfileImgUrl != null && upAndComingArtist[i].artstProfileImgUrl != ""){
-	        			upAndComingArtistHtml += '		<div class="user-1"><img src="'+ upAndComingArtist[i].artstProfileImgUrl +'"></div>';
+	        			upAndComingArtistHtml += '		<div class="user-1"><img src="'+ upAndComingArtist[i].artstProfileImgUrl +'" style="border-radius:30%;"></div>';
 	        		}else{
 	        			upAndComingArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
 	        		}
