--- a/src/main/resources/templates/thymeleaf/result_artist.html
+++ b/src/main/resources/templates/thymeleaf/result_artist.html
@@ -195,7 +195,7 @@ $(function() {
 			artstListHtml += '	<a class="hd-div3">';
 			artstListHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
 			//artstListHtml += '		<div class="hd-bg3"><img src="'+ artstList[i].artstWorkImgUrl +'" /></div>';
-			artstListHtml += '		<div class="user-1"><img src="'+ artstList[i].artstProfileImgUrl +'"></div>';
+			artstListHtml += '		<div class="user-1"><img src="'+ artstList[i].artstProfileImgUrl +'" style="width:50px;"></div>';
 			artstListHtml += '		<div class="hd-text">';
 			artstListHtml += '			<h4 class="artstInfo" style="cursor:pointer;" artstSq="'+ artstList[i].artstSq +'">'+ artstList[i].artstActvtyNm +' <span class="h4-span">'+ artstList[i].artistBirthYear +'년생</span></h4>';
 			artstListHtml += '			<div class="ellipsis"><div class="hd-d1">'+ artstList[i].artstSelfIntro +'</div></div>';
