--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -98,37 +98,37 @@ function myWorkList(){
 		
 		myWorkListHtml += '<figure class="item" >';
 		if(result[i].dealTypCd == "A" && result[i].dealSttsCd == "TP"){
-			myWorkListHtml += '	<div class="item-div-img active-on" onclick="workDetail('+ result[i].workSq +')">';
-			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
-			myWorkListHtml += '		<div class="item-ho">';
-			myWorkListHtml += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
-			myWorkListHtml += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
-			myWorkListHtml += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
-			myWorkListHtml += '				<h4>시작가 : '+ formatComma(result[i].dealStrtPrc) +'</h4>';
-			myWorkListHtml += '		</div>';
-			myWorkListHtml += '	</div>';
+// 			myWorkListHtml += '	<div class="item-div-img active-on" onclick="workDetail('+ result[i].workSq +')">';
+// 			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
+// 			myWorkListHtml += '		<div class="item-ho">';
+// 			myWorkListHtml += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
+// 			myWorkListHtml += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
+// 			myWorkListHtml += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
+// 			myWorkListHtml += '				<h4>시작가 : '+ formatComma(result[i].dealStrtPrc) +'</h4>';
+// 			myWorkListHtml += '		</div>';
+// 			myWorkListHtml += '	</div>';
 		}
 		if(result[i].dealTypCd == "S" && result[i].dealSttsCd == "TP"){
-			myWorkListHtml += '	<div class="item-div-img sale-on">';
-			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
-			myWorkListHtml += '		<div class="item-ho2 sale-div">';
-			myWorkListHtml += '			<h3>판매중</h3>';
-			myWorkListHtml += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
-			myWorkListHtml += '		</div>';
-			myWorkListHtml += '	</div>';
+// 			myWorkListHtml += '	<div class="item-div-img sale-on">';
+// 			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
+// 			myWorkListHtml += '		<div class="item-ho2 sale-div">';
+// 			myWorkListHtml += '			<h3>판매중</h3>';
+// 			myWorkListHtml += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
+// 			myWorkListHtml += '		</div>';
+// 			myWorkListHtml += '	</div>';
 		}
-		if(result[i].dealSttsCd == "TC"){
-			myWorkListHtml += '	<div class="item-div-img sold-3">';
-			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
-			myWorkListHtml += '	</div>';
-		}
-		if(result[i].dealTypCd == null){
+		//if(result[i].dealSttsCd == "TC"){
+			//myWorkListHtml += '	<div class="item-div-img sold-3">';
+			//myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
+			//myWorkListHtml += '	</div>';
+		//}
+		//if(result[i].dealTypCd == null){
 			myWorkListHtml += '<div class="item-div-img reg" style="height:320px;" >';
 			myWorkListHtml += '	<img src="'+ result[i].workMainImgUrl +'" style="height:320px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px">';
 			myWorkListHtml += '	<div class="item-ho3 reg-div">';
@@ -138,7 +138,7 @@ function myWorkList(){
 			myWorkListHtml += '		</div>';
 			myWorkListHtml += '	</div>';
 			myWorkListHtml += '</div>';
-		}
+		//}
 			
 		myWorkListHtml += '	<div class="item-body">';
 		myWorkListHtml += '		<div class="heart off" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
@@ -197,7 +197,7 @@ function myWorkList(){
 			myWorkListHtml += '			'+ result[i].dealRemainingDay +'일 '+ result[i].dealRemainingHour +'시 '+ result[i].dealRemainingMin +'분 '+ result[i].dealRemainingSec +'초';
 			myWorkListHtml += '			</p>';
 		}
-		if(result[i].dealTypCd == "S"){
+		if(result[i].dealTypCd == "S"){ 
 			myWorkListHtml += '			<h4>판매가 '+ formatComma(result[i].dealStrtPrc) +'</h4>';
 		}
 		if(result[i].dealTypCd == null){
